# modelando_sistema_bancario_simples

./: README.md  pyproject.toml  sistema_bancario_app.py
