[tool.poetry]
name = "modelando-sistema-bancario"
version = "0.1.0"
description = ""
authors = ["modelosdedados <modelosdedados@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
